<resources>
    <string name="app_name">Fólio</string>
    <string name="db_name">folio.sqlite</string>
    <string name="title_edit_activity">Edit your activity</string>
    <string name="title_activity_login">PROTOTIFOLIOS</string>
    <string name="title_activity_select_class">Select your class</string>
    <string name="title_activity_select_activity">Select your Activities</string>
    <!-- Strings related to login -->
    <string name="prompt_email"><i>usuário</i></string>
    <string name="prompt_password"><i>senha</i></string>
    <string name="action_sign_in">entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_select_portfolio">Select your Portfolios</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="checkbox">Li e Aceito</string>

    <string name="drawer_portfolio">Portfólios</string>
    <string name="drawer_activities">Atividades</string>
    <string name="drawer_general">Geral</string>
    <string name="drawer_files">Anexos</string>
    <string name="drawer_reports">Referências</string>
    <string name="drawer_settings">Configurações</string>

    <string name="files_popup_photos">Fotos</string>
    <string name="files_popup_gallery">Galeria</string>
    <string name="files_popup_videos">Videos</string>
    <string name="files_popup_text">Texto</string>
    <string name="files_popup_attachment">Anexos</string>

    <string name="cancel">Cancelar</string>
    <string name="reference_hint"><i>escreva aqui</i></string>
    <string name="policy_title"><i>termo de uso:</i></string>
    <string name="policy_agree">concordo</string>
    <string name="policy_not_agree">não concordo</string>
    <string name="privacy_policy">

Donec ornare tincidunt ante, eu condimentum magna. Vivamus porttitor odio non ipsum rhoncus blandit. Duis tempor dapibus turpis nec vestibulum. Vivamus id accumsan dolor. Vestibulum cursus erat tempor venenatis porttitor. Sed luctus tincidunt est, ornare lacinia elit egestas eget. Vivamus sapien elit, varius eget nulla eu, scelerisque feugiat lacus.

Proin massa enim, euismod id tellus in, tempor egestas elit. Maecenas ornare, est sit amet ultricies pulvinar, velit tellus pretium enim, sed placerat odio lacus in enim. Donec quis auctor augue. Praesent bibendum magna ex, vitae porta odio venenatis et. Proin nisi turpis, dignissim vel risus quis, imperdiet viverra orci. Donec porttitor felis at massa consectetur elementum. Quisque dictum faucibus felis, sit amet accumsan dui congue eu. Ut vulputate dui est, in varius mauris ultrices id. Mauris vel magna varius, ultricies neque ut, vestibulum risus. Nunc maximus ornare fermentum. Duis nec ornare felis. Donec luctus efficitur leo, eget euismod augue ornare et. Morbi interdum elit non lectus pellentesque lobortis ut vel sapien. In pulvinar accumsan vestibulum. Etiam eget turpis erat. Mauris sit amet eleifend eros.

Sed quis convallis felis. Nunc vitae lectus ut dui volutpat ultricies. Mauris mi quam, posuere eu mollis sed, tempor et nibh. Vestibulum id eros ac justo fringilla ultrices ac in diam. Fusce auctor sapien nec nulla ornare facilisis. Nunc dictum orci ex, sed porttitor turpis consequat id. Duis vitae dictum tellus. Praesent at luctus risus, vel rutrum dui. Vestibulum cursus euismod ipsum, sed imperdiet mi commodo pulvinar. Proin tristique, nisl nec dapibus aliquam, augue nunc imperdiet augue, ac dapibus libero sapien at metus. Fusce dignissim volutpat tellus quis vestibulum. In hac habitasse platea dictumst. Aenean vitae faucibus ligula. Morbi efficitur efficitur odio, id efficitur libero vulputate efficitur. Ut volutpat elit sit amet semper facilisis.

Fusce euismod cursus est. Donec sed elit scelerisque, egestas risus at, malesuada lectus. Nulla placerat odio sapien, in varius purus tristique eu. Sed pretium non magna sed tempus. Integer tincidunt nisl turpis, sit amet vehicula massa varius vitae. Donec commodo bibendum leo, ut porttitor tellus vehicula sodales. Vestibulum justo risus, faucibus eu nisi sed, semper rhoncus nisl. Ut fringilla aliquam eros, pellentesque volutpat arcu mattis in. Sed sagittis et lorem a eleifend. Sed placerat tincidunt fringilla. Mauris efficitur eu elit porttitor bibendum. Aliquam erat volutpat. Aliquam malesuada facilisis varius. Donec ac magna maximus, euismod ipsum nec, rhoncus diam. Quisque et nisi augue.

Pellentesque finibus vehicula ultrices. Vestibulum efficitur lectus nec pulvinar convallis. Donec eu eros a elit venenatis sodales. Integer dolor quam, mollis vel magna ut, maximus condimentum diam. Suspendisse potenti. Vestibulum tempor metus sit amet nisl elementum feugiat. Morbi non enim lacinia, gravida augue vel, vulputate lacus. Maecenas non leo sollicitudin diam pulvinar dictum. Sed malesuada risus tellus, at mattis tellus tincidunt id. </string>

    <string name="popup_login">Do you want to enter as Student or Tutor?</string>
    <string name="popup_login_student">Student</string>
    <string name="popup_login_tutor">Tutor</string>

    <string name="popup_logout">Tem certeza que deseja \n desconectar o dispositivo?</string>

    <string name="attachment_positive">Utilizar</string>
    <string name="attachment_fechar">Fechar</string>
    <string name="attachment_negative">Cancelar</string>
    <string name="attachment_delete">Deletar</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_teste_download_image">TesteDownloadImage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
