<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/big_drawer"
    android:layout_width="230dp"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:animateLayoutChanges="true"
    android:background="@color/gray_1"
    android:orientation="vertical"
    android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/big_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/portfolios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/drawer_integrantes" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/drawer_portfolio"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/drawer_relatorios" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/drawer_activities"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reports"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/drawer_atividades" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/drawer_reports"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/drawer_congiguracoes" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/drawer_settings"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_3"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attachments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:src="@drawable/drawer_anexos" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/drawer_files"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_3" />
        </LinearLayout>
    </LinearLayout>
