<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_logo_gray" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/separator_top"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:id="@+id/user_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="40dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_user"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/email"
                        android:layout_alignLeft="@+id/img_pass"
                        android:layout_alignStart="@+id/img_pass"
                        android:layout_below="@+id/img_logo"
                        android:layout_toLeftOf="@+id/email"
                        android:src="@drawable/ic_person" />
                </LinearLayout>


                <EditText
                    android:id="@+id/email"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_logo"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/prompt_email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="40dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/password"
                        android:layout_below="@+id/img_user"
                        android:layout_toLeftOf="@+id/password"
                        android:src="@drawable/ic_hand" />
                </LinearLayout>

                <EditText android:id="@+id/password" android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified|flagNoExtractUi"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/separator_bottom"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">

                <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:layout_centerInParent="true"
                    android:background="@drawable/btn_login"
                    android:text="@string/action_sign_in"
                    android:layout_width="250dp"
                    android:textColor="@color/gray_2"
                    android:textSize="24sp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-condensed" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>