<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_gallery"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentTop="true"
                        android:layout_weight="0.17"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/attachment_image" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/img_gallery"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/img_gallery"
                        android:layout_below="@+id/img_gallery"
                        android:gravity="center"
                        android:text="@string/files_popup_gallery"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_photos"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentTop="true"
                        android:layout_weight="0.17"
                        android:background="@android:color/transparent"
                        android:src="@drawable/att_photo" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/img_photos"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/img_photos"
                        android:layout_below="@+id/img_photos"
                        android:gravity="center"
                        android:text="@string/files_popup_photos"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/img_my_gallery"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_my_gallery"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="Minha Galeria"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_text"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentTop="true"
                        android:layout_weight="0.17"
                        android:adjustViewBounds="false"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/attachment_file" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/img_text"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/img_text"
                        android:layout_below="@+id/img_text"
                        android:gravity="center"
                        android:text="@string/files_popup_text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_videos"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentTop="true"
                        android:layout_weight="0.17"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/attachment_video" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/img_videos"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/img_videos"
                        android:layout_below="@+id/img_videos"
                        android:gravity="center"
                        android:text="@string/files_popup_videos"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#70E7D0"
                android:text="@string/cancel"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>