<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/bg_gray_bordered"
        android:layout_margin="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/policy_title"
            android:id="@+id/tv_title"
            android:layout_alignParentTop="true"
            android:textColor="@color/gray_2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:textStyle="normal|italic"
            android:textSize="18sp"
            android:textAllCaps="true" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_above="@+id/btn_agree"
            android:layout_below="@+id/tv_title"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp">

            <WebView
                android:id="@+id/term_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/gray_1"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:lineSpacingExtra="5sp" />
        </ScrollView>

        <Button
            android:id="@+id/btn_agree"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_login"
            android:text="@string/policy_agree"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:textSize="20dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/container"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/container"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:paddingBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/gray_1" />

            <Button
                android:id="@+id/btn_not_agree"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_not_agree_border"
                android:text="@string/policy_not_agree"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textAllCaps="false"
                android:textSize="20dp"
                style="@style/Widget.AppCompat.Button.Borderless" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>